# borgmatic

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  01_parts.yaml  01_pata.yaml  02_linux.yaml  02_parts.yaml  Ideas.md  Notes.md  Readme.md  _02_linux.yaml  borgmatic_wrapper.py  config.yaml  derive_pass.py  encrypt.sh  extract_contents.py  generate_passphrase.txt  hooks.sh  linux.yaml  linux_hooks.sh  parts_hooks.sh  pata_hooks.sh  pyproject.toml  regenerate_passphrase.py  ruff.toml  run.sh  run_backup.py  run_create.py  tamborgmatic-auto.service  windows-content.yaml  windows-metadata.yaml  windows.yaml  windows_disks.example.cfg  windows_hooks.sh  windows_pre.sh
_config_example/: linux_storage.yaml  pata.cfg  pata_storage.yaml
automation/: tamborgmatic-auto_gui+wol.service  tamborgmatic-auto_headless+alwayson.service
config_example/: bupsrcs.cfg  config_storage.yaml  constants.yaml  env  linux_excludes.yaml  linux_healthchecks.yaml  linux_storage.yaml  parts.cfg  parts_storage.yaml  passphrase.yaml  pata_healthchecks.yaml  pata_storage.yaml  smarthealthc.cfg  windows_parts.cfg  windows_storage.yaml
extract_contents/: _stats.py  frozen_tarfile.py  main.py  progress_printer.py  set_privileges.py  sock.py  updater_tarfile.py  utils.py
hooks.d/: 01_rename_on_success.sh  01_validate_from_config.sh  10_chown_home.sh  10_pre_mounts.sh  11_cleanup_umount_all.py  20_temp_archive.sh  30_dirs.sh  31_pre_mounts.sh  40_clean_restore_generated.sh  50_disk_structure.sh  50_docker.sh  50_generate_mkswap.sh  50_smarthealthc.sh  50_sync_chunks_cache.sh  (+4 more)
(+43 files in other folders)
